--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "pictures-website",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.html",
   "scripts": {
+    "deploy":"npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
